--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>pgarduque.GitHub.io by pgarduque</title>
+    <title>Paul Garduque's Portfolio</title>
   </head>
 
   <body>
