--- a/index.html
+++ b/index.html
@@ -39,20 +39,19 @@
 
 <p></p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p></p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p></p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p></p>
+<main class="clearfix">
+    <div class="container">
+    <img src="images/Paul.jpg" alt="Avatar"/>
+      <article>
+        <h1>Greetings</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
+        <h2 style:"font-family:cursive;">Paul Garduque</h2>
+      </article>
+    </div>
+  </main>
         </section>
 
         <aside id="sidebar">
