--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
-        <h2 style:"font-family:cursive;">Paul Garduque</h2>
+        <h3>Paul Garduque</h3>
       </article>
     </div>
   </main>
