--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <![endif]-->
 
     <title>Paul Garduque's Portfolio</title>
+    <ul class="clearfix">
+					<li><a href="#">home</a></li>
+					<li><a href="#">about us</a></li>
+					<li><a href="#">products</a></li>
+					<li><a href="#">contact</a></li>
+				</ul>
   </head>
 
   <body>
