--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    <div class="col-xs-8 col-sm-4 col-md-6 img center">
+        <img class="pull-left logo" src="images/Paul.jpg" alt="Avatar"/>
+      </div>
     <title>Paul Garduque's Portfolio</title>
     <ul class="clearfix">
-					<li><a href="#">home</a></li>
-					<li><a href="#">about us</a></li>
-					<li><a href="#">products</a></li>
-					<li><a href="#">contact</a></li>
-				</ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">about us</a></li>
+          <li><a href="#">products</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
   </head>
 
   <body>
@@ -45,19 +47,6 @@
 
 <p></p>
 
-<main class="clearfix">
-    <div class="container">
-    <img src="images/Paul.jpg" alt="Avatar"/>
-      <article>
-        <h3>Greetings</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam deleniti quidem facilis, vel tempore numquam, aperiam aut culpa error deserunt. Nulla ea, doloremque dolore optio odio repellendus enim deserunt!</p>
-        <h3>Paul Garduque</h3>
-      </article>
-    </div>
-  </main>
         </section>
 
         <aside id="sidebar">
