--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         <a href="https://github.com/pgarduque" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
-
+<footer>
+  <div class="container">
+    <p>Template by Jason Lang</p>
+  </div>
+</footer>
   
   </body>
 </html>
