--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
         <a href="https://github.com/pgarduque" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
+    <!--Projects begin here-->
+    <div class="container">
+     <div class="box1">
+       <h2>Current Projects</h2>
+        <div class="box">
+            <a href="#" target="_blank"> <img src="images/bootcamp_2.jpg" alt="restaurant"/></a>
+        </div>
+     </div>
+     <div class="box2">
+       <h2>Source Code</h2>
+        <div class="box">
+          <a href="#" target="_blank"> <img src="images/ruby_grading_program.pdf" alt="Grading Program"/></a>
+        </div>
+     </div>
+     <div class="box3">
+       <h2>Future Projects</h2>
+        <div class="box">
+            <a href="#" target="_blank"> <img src="images/question-mark.jpg" alt="Future Innovation"/></a>
+        </div>
+     </div>
+    </div>
+    <!--Projects end here-->
 <footer>
   <div class="container">
     <p>Template by Jason Lang</p>
