--- a/index.html
+++ b/index.html
@@ -28,19 +28,22 @@
      <div class="box1">
        <h2>Current Projects</h2>
         <div class="box">
-            <a href="#" target="_blank"> <img src="images/bootcamp_2.jpg" alt="restaurant"/></a>
+            <a href="#" target="_blank"> <img src="images/bootcamp_2.jpg" alt="restaurant"
+            style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
      <div class="box2">
        <h2>Source Code</h2>
         <div class="box">
-          <a href="#" target="_blank"> <img src="images/ruby_grading_program.pdf" alt="Grading Program"/></a>
+          <a href="#" target="_blank"> <img src="images/ruby_grading_program.pdf" alt="Grading Program"
+          style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
      <div class="box3">
        <h2>Future Projects</h2>
         <div class="box">
-            <a href="#" target="_blank"> <img src="images/question-mark.jpg" alt="Future Innovation"/></a>
+            <a href="#" target="_blank"> <img src="images/question-mark.jpg" alt="Future Innovation"
+            style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
     </div>
