--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <a href="https://github.com/pgarduque" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
+    <!--BANNER SECTION STARTS HERE-->
+        <div id="banner">
+            <center>
+                <h1 class="bannerTitle">Code Portfolio</h1>
+                <!--<a href="about.html" class="button">Read My Full Bio...</a>-->
+            </center>
+        </div>
+        <!--BANNER SECTION END-->
     <!--Projects begin here-->
     <div class="container">
      <div class="box1">
@@ -39,13 +47,13 @@
           style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
-     <div class="box3">
+      <div class="box3">
        <h2>Future Projects</h2>
         <div class="box">
             <a href="#" target="_blank"> <img src="images/question-mark.jpg" alt="Future Innovation"
             style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
-     </div>
+      </div>
     </div>
     <!--Projects end here-->
 <footer>
