--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--Projects end here-->
 <footer>
   <div class="container">
-    <p>Template by Jason Lang</p>
+    <p>Template by Jason Lang,modified by Paul Garduque</p>
   </div>
 </footer>
   
