--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
      <div class="box1">
        <h2>Current Projects</h2>
         <div class="box">
-            <a href="#" target="_blank"> <img src="images/bootcamp_2.jpg" alt="restaurant"
+            <a href="#" target="_blank"> <img src="images/bootcamp2_website.jpg" alt="restaurant"
             style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
      <div class="box2">
        <h2>Source Code</h2>
         <div class="box">
-          <a href="#" target="_blank"> <img src="images/ruby_grading_program.pdf" alt="Grading Program"
+          <a href="images/ruby_grading_program.pdf" target="_blank"> <img src="images/ruby_program.jpg" alt="Grading Program"
           style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
