--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
             style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
       </div>
+      <!--ABOUT SECTION STARTS HERE-->
+            <article id="featured" class="container">
+                <aside class="align-left">
+                <img src=images/Paul.jpg />
+                </aside>
+                <aside class="align-right">
+                 <a href="about.html" class="button">Read my full Bio....</a>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, dolorum, debitis, ducimus quam porro harum facere autem dignissimos qui iusto necessitatibus adipisci placeat nobis aliquid voluptatem. Quaerat, ex soluta consectetur.</p>
+                 </aside>
+            </article>
+            <!--ABOUT SECTION ENDS HERE-->
     </div>
     <!--Projects end here-->
 <footer>
