--- a/about.html
+++ b/about.html
@@ -25,6 +25,20 @@
     </header>
 
 
+  <!--ABOUT SECTION STARTS HERE-->
+            <article id="featured" class="container">
+                <aside class="align-left">
+                <img src=images/Paul.jpg />
+                </aside>
+                <aside class="align-right">
+                 <a href="images/IT Resume 2016.pdf" class="button">Read my Resume...</a>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, dolorum, debitis, ducimus quam porro harum facere autem dignissimos qui iusto necessitatibus adipisci placeat nobis aliquid voluptatem. Quaerat, ex soluta consectetur.</p>
+                 <p></p>
+                 <p></p>
+                 <p></p>
+                 </aside>
+            </article>
+            <!--ABOUT SECTION ENDS HERE-->
 
 <footer>
   <div class="container">
