--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
             <!--ABOUT SECTION ENDS HERE-->
     </div>
     <!--Projects end here-->
-<footer>
+<footer id="copyright">
   <div class="container">
-    <center><p>Template by Jason Lang,modified by Paul Garduque</p></center>
+    <center> 
+            <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+            <p>Template by Jason Lang,modified by Paul Garduque</p>
+    </center>
   </div>
 </footer>
   
