--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     
     <!--Projects begin here-->
     <div class="container">
-     <div class="box1">
+     <div class="boxA">
        <h2>Current Projects</h2>
         <div class="box">
             <a href="#" target="_blank"> <img src="images/bootcamp2_website.jpg" alt="restaurant"
             style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
-     <div class="box2">
+     <div class="boxB">
        <h2>Source Code</h2>
         <div class="box">
           <a href="images/ruby_grading_program.pdf" target="_blank"> <img src="images/ruby_program.jpg" alt="Grading Program"
           style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
-      <div class="box3">
+      <div class="boxC">
        <h2>Future Projects</h2>
         <div class="box">
             <a href="#" target="_blank"> <img src="images/question-mark.jpg" alt="Future Innovation"
