--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <!--Projects end here-->
 <footer id="copyright">
-  <div class="container">
+  <div>
             <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
             <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
