--- a/about.html
+++ b/about.html
@@ -41,11 +41,11 @@
             <!--ABOUT SECTION ENDS HERE-->
 
 <footer id="copyright">
-  <div class="container">
-            <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-            <p>Template by Jason Lang,modified by Paul Garduque</p>
+  <div>
+      <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+      <p>Template by Jason Lang,modified by Paul Garduque</p>
   </div>
 </footer>
   
