--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 </aside>
                 <aside class="align-right">
                  <a href="images/IT Resume 2016.pdf" class="button">Read my Resume...</a>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, dolorum, debitis, ducimus quam porro harum facere autem dignissimos qui iusto necessitatibus adipisci placeat nobis aliquid voluptatem. Quaerat, ex soluta consectetur.</p>
+                 <p>This page links to my contact page where you can see my rwsume and contact information</p>
                  <p></p>
                  <p></p>
                  <p></p>
@@ -46,6 +46,9 @@
       <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
       <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
+      <p>To reach Paul, please use the following:</p>
+      <p>Phone:(559)241-4386</p>
+      <p>Email:pgarduque@yahoo.com</p>
   </div>
 </footer>
   
