--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </aside>
                 <aside class="align-right">
                  <a href="about.html" class="button">Read my full Bio....</a>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, dolorum, debitis, ducimus quam porro harum facere autem dignissimos qui iusto necessitatibus adipisci placeat nobis aliquid voluptatem. Quaerat, ex soluta consectetur.</p>
+                 <p>This page links to my contact page where you can see my resume and contact information.</p>
                  </aside>
             </article>
             <!--ABOUT SECTION ENDS HERE-->
@@ -63,10 +63,10 @@
     <!--Projects end here-->
 <footer id="copyright">
   <div>
-            <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-            <p>Template by Jason Lang,modified by Paul Garduque</p>
+      <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+      <p>Template by Jason Lang,modified by Paul Garduque</p>      
   </div>
 </footer>
   
