--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 </aside>
                 <aside class="align-right">
                  <a href="images/IT Resume 2016.pdf" class="button">Read my Resume...</a>
-                 <p>This page links to my contact page where you can see my rwsume and contact information</p>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nesciunt, minima ipsam, consectetur quibusdam odit nihil quod neque doloribus hic illo, blanditiis ex consequuntur sed eligendi perferendis, exercitationem? Minus, saepe!</p>
                  <p></p>
                  <p></p>
                  <p></p>
