--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!--ABOUT SECTION ENDS HERE-->
     </div>
     <!--Projects end here-->
-<footer id="copyright">
+<footer id="copyright" class="social">
   <div>
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
       <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
