--- a/about.html
+++ b/about.html
@@ -24,31 +24,49 @@
       </div>
     </header>
 
-
-  <!--ABOUT SECTION STARTS HERE-->
-            <article id="featured" class="container">
+    
+    <!--Projects begin here-->
+    <div class="container">
+     <div class="boxA">
+       <h2>Current Projects</h2>
+        <div class="box">
+            <a href="#" target="_blank"> <img src="images/bootcamp2_website.jpg" alt="restaurant"
+            style="width:384px;height:200px;background-color:#0000FF"/></a>
+        </div>
+     </div>
+     <div class="boxB">
+       <h2>Source Code</h2>
+        <div class="box">
+          <a href="images/ruby_grading_program.pdf" target="_blank"> <img src="images/ruby_program.jpg" alt="Grading Program"
+          style="width:384px;height:200px;background-color:#0000FF"/></a>
+        </div>
+     </div>
+      <div class="boxC">
+       <h2>Future Projects</h2>
+        <div class="box">
+            <a href="#" target="_blank"> <img src="images/question-mark.jpg" alt="Future Innovation"
+            style="width:384px;height:200px;background-color:#0000FF"/></a>
+        </div>
+      </div>
+      <!--ABOUT SECTION STARTS HERE-->
+            <article id="featured" class="info">
                 <aside class="align-left">
                 <img src=images/Paul.jpg />
                 </aside>
                 <aside class="align-right">
-                 <a href="images/IT Resume 2016.pdf" class="button">Read my Resume...</a>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nesciunt, minima ipsam, consectetur quibusdam odit nihil quod neque doloribus hic illo, blanditiis ex consequuntur sed eligendi perferendis, exercitationem? Minus, saepe!</p>
-                 <p></p>
-                 <p></p>
-                 <p></p>
+                 <a href="about.html" class="button">Read my full Bio....</a>
+                 <p>This page links to my contact page where you can see my resume and contact information.</p>
                  </aside>
             </article>
             <!--ABOUT SECTION ENDS HERE-->
-
-<footer id="copyright">
+    </div>
+    <!--Projects end here-->
+<footer id="copyright" class="social">
   <div>
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
       <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
       <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-      <p>Template by Jason Lang,modified by Paul Garduque</p>
-      <p>To reach Paul, please use the following:</p>
-      <p>Phone:(559)241-4386</p>
-      <p>Email:pgarduque@yahoo.com</p>
+      <p>Template by Jason Lang,modified by Paul Garduque</p>      
   </div>
 </footer>
   
