--- a/about.html
+++ b/about.html
@@ -32,10 +32,9 @@
                 </aside>
                 <aside class="align-right">
                  <a href="images/IT Resume 2016.pdf" class="button">Read my Resume...</a>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nesciunt, minima ipsam, consectetur quibusdam odit nihil quod neque doloribus hic illo, blanditiis ex consequuntur sed eligendi perferendis, exercitationem? Minus, saepe!</p>
-                 <p></p>
-                 <p></p>
-                 <p></p>
+                 <p>Hello, my name is Paul Garduque, welcome to my portfolio website! Your time and consideration of my qualifications is greatly appreciated. This page is to introduce myself and demonstrate my background in both front and back-end development.</p>
+                 <p>As demonstrated by my resume,I am coming to you from a business background. I have worked in retail and accounting for the past 14 years, but I've always had a respect for the IT world,especially development. But I didn't truly appreciate it until two years ago, when I took my first class in coding SQL. </p>
+                 <p>Since then, I have devoted time and energy to learning various languages from C to Ruby and appreciating the value of MAC and Linux in software engineering and web development. I have also been devoting time to learn frameworks such as node, meteor and Ruby on Rails in order to expand my knowledge and develop using those frameworks where necessary. Currently, I am training myself in IT security concepts to further my knowledge of that field, as I would prefer, personally, to NOT have my website hacked. That aside, here is my portfolio demonstrating my work, and again, I thank you for your time and perusal of my website.</p>
                  </aside>
             </article>
             <!--ABOUT SECTION ENDS HERE-->
