--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <div class="boxB">
        <h2>Source Code</h2>
         <div class="box">
-          <a href="images/ruby_grading_program.pdf" target="_blank"> <img src="images/ruby_program.jpg" alt="Grading Program"
+          <a href="https://github.com/pgarduque/code-portfolio.git" target="_blank"> <img src="images/ruby_program.jpg" alt="Grading Program"
           style="width:384px;height:200px;background-color:#0000FF"/></a>
         </div>
      </div>
@@ -65,7 +65,7 @@
   <div>
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
       <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>     
   </div>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
 </footer>
