--- a/about.html
+++ b/about.html
@@ -42,9 +42,10 @@
 <footer id="copyright" class="social">
   <div>
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
       <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
   </div>
+  <br>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
       <p>To reach Paul, please use the following:</p>
       <p>Phone:(559)241-4386</p>
