--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <!--ABOUT SECTION ENDS HERE-->
     </div>
     <!--Projects end here-->
-<footer id="copyright" class="social">
-  <div>
+<footer id="copyright">
+  <div class="social">
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
       <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>     
   </div>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
