--- a/about.html
+++ b/about.html
@@ -24,31 +24,50 @@
       </div>
     </header>
 
-
-  <!--ABOUT SECTION STARTS HERE-->
+    
+    <!--Projects begin here-->
+    <div class="container">
+     <div class="boxA">
+       <h2>Current Projects</h2>
+        <div class="box">
+            <a href="#" target="_blank"> <img src="images/bootcamp2_website.jpg" alt="restaurant"
+            style="width:384px;height:200px;background-color:#0000FF"/></a>
+        </div>
+     </div>
+     <div class="boxB">
+       <h2>Source Code</h2>
+        <div class="box">
+          <a href="https://github.com/pgarduque/code-portfolio.git" target="_blank"> <img src="images/ruby_program.jpg" alt="Grading Program"
+          style="width:384px;height:200px;background-color:#0000FF"/></a>
+        </div>
+     </div>
+      <div class="boxC">
+       <h2>Future Projects</h2>
+        <div class="box">
+            <a href="#" target="_blank"> <img src="images/question-mark.jpg" alt="Future Innovation"
+            style="width:384px;height:200px;background-color:#0000FF"/></a>
+        </div>
+      </div>
+      <!--ABOUT SECTION STARTS HERE-->
             <article id="featured" class="container">
                 <aside class="align-left">
                 <img src=images/Paul.jpg />
                 </aside>
                 <aside class="align-right">
-                 <a href="images/IT Resume 2016.pdf" class="button">Read my Resume...</a>
-                 <p>Hello, my name is Paul Garduque, welcome to my portfolio website! Your time and consideration of my qualifications is greatly appreciated. This page is to introduce myself and demonstrate my background in both front and back-end development.</p>
-                 <p>As demonstrated by my resume,I am coming to you from a business background. I have worked in retail and accounting for the past 14 years, but I've always had a respect for the IT world,especially development. But I didn't truly appreciate it until two years ago, when I took my first class in coding SQL. </p>
-                 <p>Since then, I have devoted time and energy to learning various languages from C to Ruby and appreciating the value of MAC and Linux in software engineering and web development. I have also been devoting time to learn frameworks such as node, meteor and Ruby on Rails in order to expand my knowledge and develop using those frameworks where necessary. Currently, I am training myself in IT security concepts to further my knowledge of that field, as I would prefer, personally, to NOT have my website hacked. That aside, here is my portfolio demonstrating my work, and again, I thank you for your time and perusal of my website.</p>
+                 <a href="about.html" class="button">Read my full Bio....</a>
+                 <p>This page links to my contact page where you can see my resume and contact information.</p>
                  </aside>
             </article>
             <!--ABOUT SECTION ENDS HERE-->
-
+    </div>
+    <!--Projects end here-->
 <footer id="copyright">
   <div class="social">
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
       <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>     
   </div>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
-      <p>To reach Paul, please use the following:</p>
-      <p>Phone:(559)241-4386</p>
-      <p>Email:pgarduque@yahoo.com</p>
 </footer>
   
   </body>
