--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <!--ABOUT SECTION STARTS HERE-->
-            <article id="featured" class="info">
+            <article id="featured" class="container">
                 <aside class="align-left">
                 <img src=images/Paul.jpg />
                 </aside>
