--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <!--Projects end here-->
 <footer id="copyright">
   <div class="social">
-      <a href="http://www.facebook.com" target="_blank" style="height=300px;"><i class="fa fa-facebook"></i></a>
-      <a href="#" target="_blank" style="height=300px;"><i class="fa fa-linkedin"></i></a>
-      <a href="#" target="_blank" style="height=300px;"><i class="fa fa-instagram"></i></a>     
+      <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>     
   </div>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
 </footer>
