--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <link rel="stylesheet" type="text/css" href="stylesheets/font-awesome.css" type="text/css">
-
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -43,8 +42,8 @@
 <footer id="copyright">
   <div class="social">
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/paul-garduque-768b5836" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
   </div>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
       <p>To reach Paul, please use the following:</p>
