--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <footer id="copyright">
   <div class="social">
       <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-      <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>     
+      <a href="https://www.linkedin.com/in/paul-garduque-768b5836" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
   </div>
       <p>Template by Jason Lang,modified by Paul Garduque</p>
 </footer>
