--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<form method="post" action="#">
+									        <form method="post" action="mailto:pgarduque@yahoo.com" enctype="text/plain">
 										<div class="field half first">
 											<input type="text" name="name" id="name" placeholder="Name" />
 										</div>
