--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>Paul Garduque's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -98,28 +98,25 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<h2>About Paul</h2>
+									<p>Paul Garduque is an accountant turned developer who is  focused on providing top-quality IT development services. He is well versed in full-stack development, both front and back-end, as well as familiar with Information Security principles and is willing and able to both work and learn whatever is necessary.If there are any questions, please feel free to conatact Paul in the form below.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.facebook.com/pgarduque" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://github.com/pgarduque" class="icon fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/paul-garduque-768b5836" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; 2016. Design: <a href="http://html5up.net">HTML5 UP</a>.
 								</p>
 							</div>
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									        <form method="post" action="mailto:pgarduque@yahoo.com" enctype="text/plain">
+									<form method="post" action="mailto:pgarduque@yahoo.com" enctype="text/plain">
 										<div class="field half first">
 											<input type="text" name="name" id="name" placeholder="Name" />
 										</div>
