--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/bootcamp
+							<a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html" class="image"><img src="images/bootcamp
 							_2website.jpg" alt="bon appetit!" /></a>
 							<h2>Restaurant</h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
