--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html" class="image"><img src="images/bootcamp
-							_2website.jpg" alt="bon appetit!" /></a>
+							2_website.jpg" alt="bon appetit!" /></a>
 							<h2>Restaurant</h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
