--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="https://resume-paul-garduque-pgarduque.c9.io/" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
 							<h2>Nisl adipiscing</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
