--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html" class="image"><img src="images/bootcamp
+							<a href="images/bootcamp
+							2_website.jpg" class="image"><img src="images/bootcamp
 							2_website.jpg" alt="bon appetit!" /></a>
-							<h2>Restaurant</h2>
+							<a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html"> <button><h2>Restaurant</h2></button></a>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="https://resume-paul-garduque-pgarduque.c9.io/" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
 							<h2>Nisl adipiscing</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
@@ -100,7 +101,7 @@
 							<div>
 								<section>
 									<h2>About Paul</h2>
-									<p>Paul Garduque is an accountant turned developer who is  focused on providing top-quality IT development services. He is well versed in full-stack development, both front and back-end, as well as familiar with Information Security principles and is willing and able to both work and learn whatever is necessary.If there are any questions, please feel free to conatact Paul in the form below.</p>
+									<p>Paul Garduque is an accountant turned developer who is  focused on providing top-quality IT development services. He is well versed in full-stack development, both front and back-end, as well as familiar with Information Security principles and is willing and able to both work and learn whatever is necessary.If there are any questions, please feel free to contact Paul in the form below.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
