--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<a href="images/bootcamp
 							2_website.jpg" class="image"><img src="images/bootcamp
 							2_website.jpg" alt="bon appetit!" /></a>
-							<a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html"><h2>Restaurant</h2></a>
+							<!--<a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html">--><h2>Restaurant</h2><!--</a>-->
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
