--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/bootcamp
+								<a href="images/bootcamp
 							2_website.jpg" class="image"><img src="images/bootcamp
 							2_website.jpg" alt="bon appetit!" /></a>
-							<!--<a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html">--><h2>Restaurant</h2><!--</a>-->
+							<h2>Restaurant</h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
