--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-								<a href="images/bootcamp
-							2_website.jpg" class="image"><img src="images/bootcamp
+								<a href="images/restaurant.jpg" class="image"><img src="images/bootcamp
 							2_website.jpg" alt="bon appetit!" /></a>
 							<h2>Restaurant</h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
