--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-						<a href="images/restaurant.jpg" class="image"><img src="images/bootcamp
-							2_website.jpg" alt="bon appetit!" /></a>
+							<a href="images/bootcamp
+							2_website.jpg" class="image"><img src="images/restaurant.jpg" alt="bon appetit!" /></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html">Restaurant</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
