--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/bootcamp
-							2_website.jpg" class="image"><img src="images/restaurant.jpg" alt="bon appetit!" /></a>
+							<a href="images/bootcamp2_website.jpg" class="image"><img src="images/restaurant.jpg" alt="bon appetit!" /></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html">Restaurant</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/pet_store.jpg" class="image"><img src="images/pet_store.jpg" alt="Pet Store" /></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/pet%20store/index.html">Pet Store</a></h2>
+							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>">
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
