--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>">
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/bootcamp_website.jpg" class="image"><img src="images/bootcamp_website_contact.jpg" alt="Pet Store" /></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/pet%20store/index.html">Bootcamp 1 Website</a></h2>
+							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>">
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
