--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<article class="thumb">
 							<a href="images/bootcamp_website.jpg" class="image"><img src="images/bootcamp_website_contact.jpg" alt="Bootcamp 1 Page" /></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Bootcamp%201/workspace/index.html">Bootcamp 1 Website</a></h2>
-							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>">
+							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
