--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/bootcamp2_website.jpg" class="image"><img src="images/restaurant.jpg" alt="bon appetit!" /></a>
+							<a href="images/restaurant.jpg" class="image"><img src="images/bootcamp2_website.jpg" alt="bon appetit!" /></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html">Restaurant</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
@@ -42,7 +42,7 @@
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>">
 						</article>
 						<article class="thumb">
-							<a href="images/bootcamp_website.jpg" class="image"><img src="images/bootcamp_website_contact.jpg" alt="Bootcamp 1 Page" /></a>
+							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Bootcamp 1 Page" /></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Bootcamp%201/workspace/index.html">Bootcamp 1 Website</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
@@ -87,9 +87,9 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects" /></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Bootcamp%201/workspace/index.html">Future projects</a></h2>
+							<p>This links to our GitHub Page, where all future projects will reside.....</p>">
 						</article>
 					</div>
 
