--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
+							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Challenge Page" /></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/resume_paul_garduque/workspace/index.php">Challenge Website</a></h2>
+							<p>This site was designed as a challenge for DPS Telecom.</p>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
 							<h2>Cursis aliquam nisl</h2>
@@ -88,7 +87,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects" /></a>
-							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Bootcamp%201/workspace/index.html">Future projects</a></h2>
+							<h2><a href="https://github.com/pgarduque/code-portfolio">Future projects</a></h2>
 							<p>This links to our GitHub Page, where all future projects will reside.....</p>">
 						</article>
 					</div>
