--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Challenge Page" /></a>
-							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/resume_paul_garduque/workspace/index.php">Challenge Website</a></h2>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/tree/master/resume_paul_garduque/workspace">Challenge Website</a></h2>
 							<p>This site was designed as a challenge for DPS Telecom.</p>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
