--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Challenge Page" /></a>
+							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="Challenge Page" /></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/tree/master/resume_paul_garduque/workspace">Challenge Website</a></h2>
 							<p>This site was designed as a challenge for DPS Telecom.</p>
 						<article class="thumb">
