--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects" /></a>
+							<a href="images/question-mark.jpg" class="image"><img src="images/question-mark.jpg" alt="Future Projects" /></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio">Future projects</a></h2>
 							<p>This links to our GitHub Page, where all future projects will reside.....</p>">
 						</article>
