--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 							<h2><a href="https://github.com/pgarduque/code-portfolio/tree/master/resume_paul_garduque/workspace">Challenge Website</a></h2>
 							<p>This site was designed as a challenge for DPS Telecom.</p>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/calculator.jpg" class="image"><img src="images/calculator.jpg" alt="Calculator" style="width:300px;height:200px;"/></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Calculator.java">Calculator Assignment</a></h2>
+							<p>This applet was done as a project for DeVry University.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
