--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/restaurant.jpg" class="image"><img src="images/bootcamp2_website.jpg" alt="bon appetit!" /></a>
+							<a href="images/restaurant.jpg" class="image"><img src="images/bootcamp2_website.jpg" alt="bon appetit!" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html">Restaurant</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/pet_store.jpg" class="image"><img src="images/pet_store.jpg" alt="Pet Store" /></a>
+							<a href="images/pet_store.jpg" class="image"><img src="images/pet_store.jpg" alt="Pet Store" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/pet%20store/index.html">Pet Store</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>">
 						</article>
 						<article class="thumb">
-							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Bootcamp 1 Page" /></a>
+							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Bootcamp 1 Page" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Bootcamp%201/workspace/index.html">Bootcamp 1 Website</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
@@ -53,40 +53,39 @@
 						<article class="thumb">
 							<a href="images/calculator.jpg" class="image"><img src="images/calculator.jpg" alt="Calculator" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Calculator.java">Calculator Assignment</a></h2>
-							<p>This applet was done as a project for DeVry University.</p>
+							<p>This applet was done as a project for DeVry University.</p>						</article>
+						<article class="thumb">
+							<a href="images/sales_receipt.jpg" class="image"><img src="images/sales_receipt.jpg" alt="Sales Tax" style="width:300px;height:200px;"/></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/ruby_code/print_receipt.rb">Sales Tax Program</a></h2>
+							<p>This applet was done as a project in order to learn Ruby.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
+							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" style="width:300px;height:200px;"/></a>
 							<h2>Mauris id tellus arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
+							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" style="width:300px;height:200px;"/></a>
 							<h2>Nunc vehicula id nulla</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
+							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" style="width:300px;height:200px;"/></a>
 							<h2>Neque et faucibus viverra</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" style="width:300px;height:200px;"/></a>
 							<h2>Mattis ante fermentum</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" style="width:300px;height:200px;"/></a>
 							<h2>Sed ac elementum arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects" /></a>
+							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio">Future projects</a></h2>
 							<p>This links to our GitHub Page, where all future projects will reside.....</p>">
 						</article>
