--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
 							<p>This applet was done as a project in order to learn Ruby.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" style="width:300px;height:200px;"/></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/math_operations.jpg" class="image"><img src="images/math_operations.jpg" alt="Sales Tax" style="width:300px;height:200px;"/></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/c_code/math%20operators.c">Math Operations</a></h2>
+							<p>This applet was done as a project in order to learn C.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" style="width:300px;height:200px;"/></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/screensaver.jpg" class="image"><img src="images/screensaver.jpg" alt="Screensaver" style="width:300px;height:200px;"/></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Saver.java">Screen Saver</a></h2>
+							<p>This applet was done as a project in order to learn Java.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" style="width:300px;height:200px;"/></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/account.jpg" class="image"><img src="images/account.jpg" alt="Savings Account" style="width:300px;height:200px;"/></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/c%2B%2B_code/C%2B%2B%20Project%204.txt">Savings Account</a></h2>
+							<p>This applet was done as a project in order to learn C++.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" style="width:300px;height:200px;"/></a>
