--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<p>This applet was done as a project in order to learn Ruby.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/math_operations.jpg" class="image"><img src="images/math_operations.jpg" alt="Sales Tax" style="width:300px;height:200px;"/></a>
+							<a href="images/math_operations.jpg" class="image"><img src="images/math_operations.jpg" alt="Math Operations" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/c_code/math%20operators.c">Math Operations</a></h2>
 							<p>This applet was done as a project in order to learn C.</p>
 						</article>
@@ -75,9 +75,9 @@
 							<p>This applet was done as a project in order to learn C++.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" style="width:300px;height:200px;"/></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/" class="image"><img src="images/" alt="" style=""width:300px;height:200px;"/></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/python_code/quadratic_equations.py">Quadratic Equations</a></h2>
+							<p>This applet was done as a project in order to learn Python.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" style="width:300px;height:200px;"/></a>
