--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<p>This applet was done as a project in order to learn C++.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/" class="image"><img src="images/" alt="" style=""width:300px;height:200px;"/></a>
+							<a href="images/" class="image"><img src="images/" alt="Quadratic Equations" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/python_code/quadratic_equations.py">Quadratic Equations</a></h2>
 							<p>This applet was done as a project in order to learn Python.</p>
 						</article>
